--- a/app.json
+++ b/app.json
@@ -33,6 +33,6 @@
         }
     },
     "website": "https://aicn.site/",
-    "repository": "https://github.com/用户名/项目名/",
+    "repository": "https://github.com/egdgs/eghv2l/",
     "stack": "container"
 }
